--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-25 Version 1.3.3 
+ - Fix to prevent breakage from new testthat
+ - Documentation moved to Roxygen2 format
+
 2012-11-30 Version 1.3.1
  - Fixes documentation
  - Adds Namespace
