--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-10 Version 1.4.0
+ - Fix documentaion for roxygen-4.0.0+ (#1)
+ - No other functional fixes
+
 2014-02-25 Version 1.3.3 
  - Fix to prevent breakage from new testthat
  - Documentation moved to Roxygen2 format
