--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2015-06-22 Version 1.5.3
+ - Fix issue #5, get.vars(NULL, NULL) throws an error ... 
+   Thanks to Paul Bailey for poinint out the problem.
+
+
 2014-03-11 Version 1.4.0
  - Fix documentaion for roxygen-4.0.0+ (#1)
  - No other functional fixes
